--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
 	"keywords": [
 		"yii2",
 		"snippet",
-    "yii2 snippets
+		"yii2 snippets"
 	],
 	"icon": "images/icon.png",
 	"galleryBanner": {
