--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "yii2-snippets",
 	"displayName": "Yii2 Snippets",
 	"description": "Yii2 snippets for Visual Studio Code",
-	"version": "0.0.2",
+	"version": "0.0.3",
 	"publisher": "imanilchaudhari",
 	"keywords": [
 		"yii2",
@@ -11,7 +11,7 @@
 	],
 	"author": {
 		"name": "Anil Chaudhari",
-		"email": "caanil90@hotmail.com",
+		"email": "imanilchaudhari@outlook.com",
 		"url": "https://anilcodes.com"
 	},
 	"homepage": "https://github.com/imanilchaudhari/yii2-snippets-vscode",
@@ -38,6 +38,10 @@
 			{
 				"language": "php",
 				"path": "./snippets/yii.json"
+			},
+			{
+				"language": "php",
+				"path": "./snippets/class.json"
 			},
 			{
 				"language": "php",
